--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,3 @@
-body, html, #root, .app, .container {
-  width: 100%;
-  height: 100%;
-}
-
-.container {
-  font-size: 28px;
-  color: #fff;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #469968;
-}
-.loginForm {
-  box-sizing: border-box;
- 
-}
-.inputField {
-  padding-top: 16px;
-}
-.input {
-  box-sizing: border-box;
-  outline: none;
-  border: solid 2px #1189de;
-  border-radius: 4px;
-  color: #292929;
-  width: 100px;
-  padding: 12px;
-  font-size: 14px;
-  background: rgba(255, 255, 255, 1);
-}
-.submitButton {
-  padding-top: 16px;
-  text-align: center;
-}
-btn {
-  width: 100%;
-  min-width:280px;
-  color: #565656;
-  padding: 12px;
-  font-size: 14px;
-  font-weight: bold;
-  border: solid 2px #1189de;
-  border-radius: 4px;
-  background: #fff;
-  
+body {
+  font-family: 'Dancing Script', cursive;
 }
